# Tasks

task_1/: Makefile  hello.c  libgoodbye.c  libhello.c
task_1/dynlibs/: libhello.c  libhello.h
task_1/lib/: libgoodbye.c  libgoodbye.h  libhello.c  libhello.h
task_1/stlibs/: libgoodbye.c  libgoodbye.h
task_2/: config.ini  minskweather.sh
task_3/: find_dups.sh  gen_files.sh
task_4/: Makefile  program.c
task_5/: Makefile  client.c  data_types.c  data_types.h  file  server.c
task_6/: Makefile  client.c  server.c  tcp_settings.c  tcp_settings.h
task_7/: .gitignore  CMakeLists.txt  Makefile  program.c
task_7/docker/: Dockerfile  Makefile
